# oxide

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
detection/: AV_BASELINE.md  COVERAGE_MATRIX.md  README.md
detection/ir/: memory_analysis.md  network_forensics.md  triage_linux.md  triage_macos.md  triage_windows.md
detection/network/: ja3_fingerprints.md  suricata_oxide.rules  zeek_oxide.zeek
detection/sigma/: antiforensics.yml  c2_beaconing.yml  commands.yml  credential_access.yml  credential_lsass_indirect.yml  dns_doh_known_resolvers.yml  dns_tunnel_long_subdomain.yml  evasion_amsi_hwbp.yml  evasion_ekko_text_encrypt.yml  evasion_etw_patch.yml  evasion_indirect_syscall.yml  evasion_sandbox_evasion.yml  evasion_shellcode_encoding.yml  http_beaconing.yml  implant_stealer_subprocess.yml  implant_tool_staging.yml  injection_early_cascade.yml  injection_hollow.yml  injection_wth.yml  persistence_com_hijack.yml  persistence_linux.yml  persistence_macos.yml  persistence_windows.yml  privesc_named_pipe_impersonation.yml  privesc_uac_cmstplua.yml  process_injection.yml  stealth_pe_header_zeroing.yml  stealth_ppid_mismatch.yml  stealth_self_deletion.yml  stealth_task_scheduler_com.yml  ws_tunnel.yml
detection/yara/: oxide_implant.yar  oxide_memory.yar  rust_rat_generic.yar
detection/zeek/: dns_c2.zeek
dll/: Cargo.toml
dll/src/: install.rs  lib.rs
docs/: architecture.md  attack-chain.md
implant/: Cargo.toml
implant/src/: checkin.rs  config.rs  dispatcher.rs  dns_wire.rs  main.rs  transport.rs  tunnel_client.rs
implant/src/commands/: elevate.rs  file_download.rs  file_list.rs  lsass_dump.rs  mod.rs  persist_remove.rs  persist_status.rs  portfwd.rs  process_list.rs  screenshot.rs  shell.rs  socks5.rs  steal.rs  uac_bypass.rs
implant/src/evasion/: amsi.rs  etw.rs  mod.rs  peb.rs  ppid.rs  sandbox.rs  sleep.rs
implant/src/persistence/: mod.rs
implant/src/persistence/darwin/: launch_agent.rs  login_item.rs  mod.rs
implant/src/persistence/linux/: bash_profile.rs  cron.rs  mod.rs  systemd.rs
implant/src/persistence/windows/: dll_sideload.rs  mod.rs  registry.rs  scheduled_task.rs
implant/src/platform/: darwin.rs  linux.rs  mod.rs  windows.rs
implant/src/transport/: dns.rs  doh.rs  http.rs  mod.rs  tls.rs
lab-setup/: gen_certs.sh
panel/: pyproject.toml
panel/panel/: cli.py  crypto.py  dns_server.py  handler.py  http_handler.py  listener.py  main.py  protocol.py  registry.py  storage.py  tunnel.py
panel/panel/api/: __init__.py  app.py  auth.py  deps.py  events.py  files.py  schemas.py
panel/panel/api/routers/: auth.py  bots.py  builder.py  c2.py  commands.py  downloads.py  screenshots.py  staging.py  stealer.py  tunnel.py  ws.py
panel/tests/: test_crypto.py  test_dns_server.py  test_doh.py  test_http_beacon.py  test_protocol.py  test_stateless_crypto.py
panel/web/: dashboard.html  index.html
panel/web/static/css/: style.css
panel/web/static/js/: app.js
shared/: Cargo.toml
shared/src/: constants.rs  crypto.rs  frame.rs  lib.rs  packet.rs
tests/: integration_test.sh
tests/vm/: __init__.py  conftest.py  test_01_basic.py  test_02_persistence.py  test_03_task_queue.py  test_04_concurrency.py  test_05_network.py  test_06_websocket.py  test_07_performance.py
tests/vm/helpers/: __init__.py  api_client.py  ssh_executor.py  wait_conditions.py
tests/vm/infrastructure/: __init__.py  network.py  provisioner.py  virsh_wrapper.py  vm_manager.py
vm-config/: oxide-c2.xml  oxide-implant.service  oxide-network.xml  oxide-target.xml
