[package]
name = "oxide-implant"
version = "0.1.0"
edition = "2021"

[dependencies]
oxide-shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
sysinfo = "0.32"
rand = "0.8"
base64 = "0.22"
anyhow = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user", "process"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
